2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/rest-collision.cc (do_shift): handle (0-down, 2-up) case
	too.

2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/ottava-bracket.cc (print): fix ottava on rests.

2004-05-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.2.1
	
	* scm/music-functions.scm (set-accidental-style): use GrandStaff
	iso. PianoStaff.

2004-05-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/lilypond.tely (Top): update version number.

	* lily/lyric-engraver.cc (get_voice_to_lyrics): go higher when
	finding Voice context. 

	* Documentation/user/music-glossary.tely (Top): replace table strong
	with table samp.

	* lily/stem.cc (get_default_stem_end_position): handle dir==0
	case. This fixes a bugs/tremolo-repeat

	* Documentation/user/introduction.itely (About this manual): fix
	URLS.

2004-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond.py: Handle --set=fontencoding=FONTENC (default:
	unset) and --set=inputencoding=INPUTENC (default: latin1).

2004-04-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py: backport of #'(markup).

2004-04-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.2.0

	* scripts/convert-ly.py (conv): add 2.2.0 rule.

2004-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/cluster.cc (height): Fix warning.

	* lily/parser.yy: Janitorial cleanups.

	* Documentation/user/tutorial.itely (Tutorial): Typo.

2004-04-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/change-iterator.cc (process): search at multiple context
	levels. This fixes 

	
	* scm/part-combiner.scm (analyse-spanner-states): use split-index,
	not voice-state index for tie state. This fixes a partcombine
	problem with ties.

	* Documentation/user/tutorial.itely (Commenting input files): add
	note about convert-ly.

	* input/test/cadenza-skip.ly:  new file.

2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/nl.po: Spelling fixes.
