@@ -1,3 +1,11 @@
+2004-05-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/context-def.cc (filter_engravers): backport.  Fixes:
+	crash-bar-number.ly
+
+	* lily/percent-repeat-engraver.cc (try_music): backport. Fixes:
+	skipbars-percent-repeat.ly
+
 2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/rest-collision.cc (do_shift): handle (0-down, 2-up) case
